[package]
name = "healthcat"
version = "0.3.0"
authors = ["Dimitar Georgievski <dimitar.georgievski@casa-systems.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "healthcat"

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
# serde = "1.0.193"
config = { version = "0.13", default-features = false, features = ["yaml"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"
serde_json = "1.0"
serde_yaml = "0.9"
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
kube = { version = "0.87", default-features = false, features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
anyhow = "1.0.76"
itertools = "0.10.5"
futures = "0.3"
valuable = "0.1"
regex = {version = "1.10"}
reqwest = { version = "^0.11", features = ["json"] }
cloudevents-sdk = { version = "0.7.0", features = ["reqwest"]}
chrono = { version = "0.4"}
semver = { version = "1.0.21"}

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"


[profile.release]
lto = true
codegen-units = 1